--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         * SITE_NAME：站点名称
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "",
+            SCF_GATEWAY: "https://service-avso6e6e-1251933686.gz.apigw.tencentcs.com/release/fodi",
             SITE_NAME: "FODI",
             IS_CF: true
         };
